[project]
name = "advance-tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "faiss-cpu>=1.11.0.post1",
    "langchain>=0.3.26",
    "openai>=1.97.1",
    "scikit-learn>=1.7.1",
    "streamlit>=1.47.0",
    "torch>=2.7.1",
    "transformers>=4.53.3",
]
